use-case2-cross-namespace-routing/lab/shoes-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-httproute
spec:
  parentRefs:
  - name: retail-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /shoes
    backendRefs:
    - name: shoes
      namespace: footwear
      port: 80
